# sticky-notes

./: .gitignore  README.md  README_CN.md  index.html  main.cjs  package-lock.json  package.json  preload.cjs  tsconfig.json  vite.config.ts  使用说明.md  预期规划.md
src/: App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  sticky_desk.rs
src-tauri/src/sticky_desk/: commands_data.rs  commands_settings.rs  normalization.rs  storage.rs  windowing.rs
src/components/notes/: FutureTasksPanel.tsx  NoteCard.tsx  NoteList.tsx  NotesEmptyState.tsx  NotesFloatingStats.tsx  NotesHero.tsx  NotesSection.tsx  NotesToolbar.tsx  WindowOverlayControls.tsx
src/components/notes/futureTasksPanel/: taskRows.ts  time.ts  useNowTimestamp.ts
src/data/: futureTasks.ts  noteSeed.ts  notes.ts
src/hooks/: useActiveTime.ts  useAppSettings.ts  useFocusTimer.ts  useFutureTasks.ts  useNotes.ts
src/lib/: desktopApi.ts  noteSelectors.ts  noteTime.ts
src/pages/: NotesBoard.tsx
src/pages/notesBoard/: helpers.ts  useDetachedWindowsStateSync.ts  usePointerInsideShell.ts
src/types/: futureTask.ts  note.ts  stickyDesk.d.ts
